# Progetto_Finale_Algoritmi_e_Calcolatori_2019

./: Analytics.h  Ancestors.cpp  Ancestors.h  Basic_Features.h  CMakeLists.txt  Company.cpp  Company.h  Date.cpp  Date.h  Group.cpp  Group.h  Post.cpp  Post.h  Profile.cpp  Profile.h  Simple_User.cpp  Simple_User.h  main.cpp
