cmake_minimum_required(VERSION 3.9)
project(progetto_informatica_v1)

set(CMAKE_CXX_STANDARD 11)

add_executable(progetto_informatica_v1 main.cpp Profile.cpp Profile.h Simple_User.cpp Simple_User.h Company.cpp Company.h Basic_Features.h Group.cpp Group.h Date.cpp Date.h Analytics.h Ancestors.cpp Ancestors.h Post.cpp Post.h)